--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,6 +1,6 @@
 /* replace here for the image size */
 img {
-    min-width: 100%;
+    max-width: 100%;
     height: auto;
     background-color: cadetblue;
   }
